<package format="2">
  <name>actionlib_tutorials</name>
  <version>1.2.4</version>
  <description>
  This package is for actionlib tutorials.
  </description>
  <maintainer email="quentin@todo.todo">quentin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
